--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "aos": "^2.3.4",
     "dayjs": "^1.11.7",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
@@ -21,6 +22,7 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
