--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-slick": "^0.23.13",
     "aos": "^2.3.4",
     "dayjs": "^1.11.7",
     "eslint": "8.34.0",
@@ -19,6 +20,8 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
